--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.16.4",
     "knex": "^0.16.5",
     "react-router-dom": "^5.0.0",
+    "sqlite3": "^4.0.6",
     "superagent": "^5.0.2"
   },
   "devDependencies": {
