--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "license": "ISC",
   "scripts": {
     "client": "webpack-dev-server --hot --inline",
-    "dev": "node server & webpack --watch",
+    "dev": "nodemon server & webpack --watch",
     "server": "node server",
-    "start": "webpack && node server",
+    "start": "node server",
     "test": "jest --watchAll"
   },
   "babel": {
@@ -29,11 +29,14 @@
     ]
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "knex": "^0.16.5",
+    "lodash.shuffle": "^4.2.0",
+    "lodash.take": "^4.1.1",
     "react-router-dom": "^5.0.0",
     "sqlite3": "^4.0.6",
-    "superagent": "^5.0.2"
+    "superagent": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
@@ -47,6 +50,7 @@
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "jest": "^24.7.1",
+    "nodemon": "^1.18.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "webpack": "^4.29.6",
