--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "handlebars": "^4.1.2",
     "knex": "^0.16.5",
     "lodash.shuffle": "^4.2.0",
     "lodash.take": "^4.1.1",
